Set auto_drop templates and clear versionSuffix